--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@groceristar/groceristar-fetch": "^1.1.52",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^3.1.12",
