--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "it's a middleman between main api and frontend react ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "@groceristar/groceristar-fetch": "^1.1.60",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jest": "^24.0.0",
     "mongodb": "^3.1.13",
     "nodemon": "^1.18.9"
   }
