--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "it's a middleman between main api and frontend react ",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test":"NODE_ENV=test jest --forceExit --detectOpenHandles",
+    "watch": "NODE_ENV=test jest --forceExit --watch --detectOpenHandles",
     "dev": "nodemon server.js"
   },
   "author": "",
