--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "it's a middleman between main api and frontend react ",
   "main": "index.js",
   "scripts": {
-    "test":"NODE_ENV=test jest --forceExit --detectOpenHandles",
+    "test": "NODE_ENV=test jest --forceExit --detectOpenHandles",
     "watch": "NODE_ENV=test jest --forceExit --watch --detectOpenHandles",
     "dev": "nodemon server.js"
   },
@@ -18,5 +18,8 @@
     "mongodb": "^3.1.13",
     "nodemon": "^1.18.9",
     "supertest": "^3.4.2"
+  },
+  "devDependencies": {
+    "@groceristar/sd-wrapper": "^1.0.1"
   }
 }
