--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test jest --forceExit --detectOpenHandles",
     "watch": "NODE_ENV=test jest --forceExit --watch --detectOpenHandles",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "files": "node --experimental-modules files.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,9 +15,11 @@
     "@groceristar/groceristar-fetch": "^1.1.60",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "fs": "^0.0.1-security",
     "jest": "^24.1.0",
     "mongodb": "^3.1.13",
     "nodemon": "^1.18.9",
+    "path": "^0.12.7",
     "supertest": "^3.4.2"
   },
   "devDependencies": {
