--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@groceristar/f-loopback": "^0.0.2",
+    "@groceristar/f-showcase": "^0.0.2",
+    "@groceristar/fetch-grocery-list": "^0.1.4",
     "@groceristar/groceristar-fetch": "^2.1.10",
+    "@groceristar/recipes-methods": "^0.1.4",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "fs": "^0.0.2",
