--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@groceristar/f-showcase": "^0.0.2",
     "@groceristar/fetch-grocery-list": "^0.1.4",
     "@groceristar/groceristar-fetch": "^2.2.4",
+    "@groceristar/mini-fetch": "^0.1.2",
     "@groceristar/recipes-methods": "^0.1.4",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
